/*
 * $Id: ChangeLog,v 1.849 2003/03/18 00:38:57 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-03-18 12:21 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/regex.c
    + Added function
         HB_RegexSplit( cRegEx, cStr [, bCaseInsens [, bMultiLine,
            [, nMax] ] ] ) --> aSplit
      This splits cStr (using cRegEx as a token) into aSplits. Each part of
      cStr that is separed by a string matching cRegEx is separated and put
      into a different element of aSplit.
      If nMax is given, a maximum of nMax elements are returned in the array,
      so you can have HB_RegexSplit( "=", "A test = A=B=C",,,2 ) that will
      return the array [ "A test ", " A=B=C" ].

      If cRegEx cannot be matched in cStr, HB_RegexSplit will return NIL.

  * tests/regex.prg
    + Added a test for HB_RegexSplit()


2003-03-18 01:35 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/inet.c
    ! Fixed async socket closing under linux. Now closing socket with InetClose
      will make also select() to return, and so functions waiting forever (as
      accept) will cleanly return. 
    
2003-03-17 12:17 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/win32ole.prg
    ! Fixed GPF when passing an OLE Object as paramater to an OLE Method.

2003-03-17 05:32 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * include/hbcompress.h
  * source/rtl/hbcompress.c
    - Removed zlib specific decl and memory management
    ! Using now hb_xgrab() family instead of malloc/calloc
      (also thread safe).
    % some code cleaning.

2003-03-16 14:17 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * hrbdll.bc
  * source/rtl/regex.c
  * source/rtl/trace.c
    ! Fixed to allow creation of xHarbour DLL and DLL linked applications (BCC55)

2003-03-16 16:05 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>