@@ -8,6 +8,12 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2003-03-18 12:42 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
+  * source/rtl/regex.c
+    % Optimization for non-group aware scans ( has/like operators
+      and RegexSplit). Using "1" as maximum group matches, that makes
+      core regex functions to stop when just found a first match.
+
 2003-03-18 12:21 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
   * source/rtl/regex.c
     + Added function
